--- a/launcher-bootstrap/src/main/resources/com/skcraft/launcher/lang/Bootstrap.properties
+++ b/launcher-bootstrap/src/main/resources/com/skcraft/launcher/lang/Bootstrap.properties
@@ -5,12 +5,12 @@
 #
 button.cancal=Cancel
 errorTitle=Error
-errors.failedDownloadError=The OpenCommunity Launcher could not be downloaded.
+errors.failedDownloadError=The FoxFord Launcher could not be downloaded.
 errors.bootstrapError=An error occurred while trying to bootstrap the launcher\!
 errorDialog.reportError=To report this error, provide\:
-downloader.title=Downloading OpenCommunity Launcher...
+downloader.title=Downloading FoxFord Launcher...
 downloader.pleaseWait=Please wait...
-downloader.status=Downloading latest OpenCommunity Launcher...
-downloader.progressStatus=Downloading latest OpenCommunity Launcher (%.2f%%)...
+downloader.status=Downloading latest FoxFord Launcher...
+downloader.progressStatus=Downloading latest FoxFord Launcher (%.2f%%)...
 progress.confirmCancel=Are you sure that you wish to cancel?
 progress.confirmCancelTitle=Cancel
