regex for username

--- a/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher.properties
@@ -105,6 +105,8 @@ login.noLoginError=Please enter your account details.
 login.noLoginTitle=Missing Account
 login.minecraftNotOwnedError=Sorry, Minecraft is not owned on that account.
 login.relogin=Please log in again. ({0})
+login.invalidUsernameError=Invalid username. Please use only English letters, numbers, and underscores.
+login.invalidUsernameTitle=Invalid Username
 
 login.microsoft.seeBrowser=Check your browser to login with Microsoft.\n If this didn't work, start the launcher via \nthe console and the address will be visible there.
 login.xbox.generic=Failed to authenticate with Xbox Live.
