--- a/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher_ru.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher_ru.properties
@@ -21,7 +21,7 @@ options.useProxyCheck = Использовать прокси в Minecraft
 options.jvmPath=Альтернативный путь к Java Runtime\:
 options.jvmRuntime=Java Runtime\:
 options.jvmArguments=Аргументы JVM\:
-options.64BitJavaWarning=<html>Убедитесь, что у вас установлена <strong>64-битная Java</strong>, если вы планируете установить ограничение на память выше.
+options.64BitJavaWarning=<html>Убедитесь, что у вас установлена <strong>64-битная Java</strong>, если вы планируете установить ограничение на память ниже.
 options.minMemory=Минимальная память (МБ)\:
 options.maxMemory=Максимальная память (МБ)\:
 options.permGen=PermGen (МБ)\:
@@ -94,13 +94,15 @@ login.login=Войти...
 login.title=Вход в Minecraft
 login.nickname=Никнейм\:
 login.password=Пароль\:
-login.defaultMessage=Авторизация
+login.defaultMessage=Используй только английские буквы и/или цифры
 login.loggingInTitle=Вход...
 login.loggingInStatus=Вход в Minecraft...
 login.noLoginError=Пожалуйста, введите данные вашего аккаунта.
 login.noLoginTitle=Отсутствует аккаунт
 login.minecraftNotOwnedError=Извините, но Minecraft не приобретен на этом аккаунте.
 login.relogin=Пожалуйста, войдите снова. ({0})
+login.invalidUsernameError=Неверное имя пользователя. Пожалуйста, используйте только английские буквы, цифры и символы подчеркивания.
+login.invalidUsernameTitle=Неверное имя пользователя
 
 login.microsoft.seeBrowser=Проверьте свой браузер, чтобы войти с помощью учетной записи Microsoft. Если это не сработало, запустите лаунчер через консоль, и адрес будет виден там.
 login.xbox.generic=Ошибка аутентификации в Xbox Live.
