--- a/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher.properties
@@ -89,7 +89,7 @@ launcher.modpackColumn=Modpack
 accounts.title=Select the account to play with
 accounts.play=Play!
 accounts.refreshingStatus=Refreshing login session...
-accounts.addOffline=Add Offline
+accounts.addOffline=Add Account
 accounts.addMicrosoft=Add Microsoft account
 accounts.removeSelected=Forget selected account
 accounts.confirmForgetTitle=Forget account
